// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 0);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 0);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: calc(4px * 2);
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  width: auto;
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0>*+*:not(marquee) {
  margin-left: calc(4px * 0);
  margin-left: calc(var(--wp-g2-grid-base) * 0);
}

.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (prefers-reduced-motion) {
  .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1:hover {
  z-index: 1;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 2);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: calc(4px * 2);
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: 2px;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 0.5px transparent;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  line-height: 1;
  min-height: 30px;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(4px * 1);
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(4px * 1);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding-left: calc(4px * 0);
  padding-left: calc(var(--wp-g2-grid-base) * 0);
  padding-right: calc(4px * 0);
  padding-right: calc(var(--wp-g2-grid-base) * 0);
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
  text-align: center;
  color: #007cba;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: calc(12px * calc(4/3));
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: calc(12px * calc(4/3));
  padding-right: var(--wp-g2-button-padding-x);
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color);
  background-color: #ffffff;
  background-color: var(--wp-g2-control-background-color);
  border: 1px solid;
  border-color: #757575;
  border-color: var(--wp-g2-control-border-color);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  padding: calc(4px * 0);
  padding: calc(var(--wp-g2-grid-base) * 0);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2>*+*:not(marquee) {
  margin-left: calc(4px * 2);
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:hover,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  -webkit-transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[disabled]:not([aria-busy='true']),
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  z-index: 1;
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:focus {
  box-shadow: 0 0 0 0.5px #D94F4F;
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 svg {
  display: block;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active {
  color: #007cba;
  color: var(--wp-g2-button-text-color-active);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:hover {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-hover);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-hover);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-focused='true'] {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-focus);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-focus);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active {
  background-color: rgba(0, 0, 0, 0.05);
  background-color: var(--wp-g2-button-secondary-color-active);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-active);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-active);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:hover,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:active,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:focus,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true'][data-focused='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:active {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:hover,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  z-index: 1;
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-focus);
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  opacity: 1;
}

@media (prefers-reduced-motion) {
  .emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 svg {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 14px;
  width: 14px;
}

@media (prefers-reduced-motion) {
  .emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 svg {
  display: block;
}

.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: -1px;
  box-shadow: 0 0px 0px 0 rgba(0 ,0,0,0);
  opacity: 1;
  opacity: var(--wp-g2-elevation-intensity);
  left: -1px;
  right: -1px;
  top: -1px;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

@media (prefers-reduced-motion) {
  .emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: -1px!important;
}

@media (prefers-reduced-motion) {
  .emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:hover {
  z-index: 1;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 2);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: calc(4px * 2);
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: 2px;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 0.5px transparent;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  line-height: 1;
  min-height: 30px;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(4px * 1);
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(4px * 1);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding-left: calc(4px * 0);
  padding-left: calc(var(--wp-g2-grid-base) * 0);
  padding-right: calc(4px * 0);
  padding-right: calc(var(--wp-g2-grid-base) * 0);
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  text-align: center;
  color: #007cba;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: calc(12px * calc(4/3));
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: calc(12px * calc(4/3));
  padding-right: var(--wp-g2-button-padding-x);
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color);
  background-color: #ffffff;
  background-color: var(--wp-g2-control-background-color);
  border: 1px solid;
  border-color: #757575;
  border-color: var(--wp-g2-control-border-color);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  padding: calc(4px * 0);
  padding: calc(var(--wp-g2-grid-base) * 0);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7>*+*:not(marquee) {
  margin-left: calc(4px * 2);
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:hover,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  -webkit-transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[disabled]:not([aria-busy='true']),
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  z-index: 1;
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:focus {
  box-shadow: 0 0 0 0.5px #D94F4F;
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7 svg {
  display: block;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active {
  color: #007cba;
  color: var(--wp-g2-button-text-color-active);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:hover {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-hover);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-hover);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-focused='true'] {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-focus);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-focus);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-focus);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active {
  background-color: rgba(0, 0, 0, 0.05);
  background-color: var(--wp-g2-button-secondary-color-active);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-active);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-active);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:hover,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:active,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:focus,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true'][data-focused='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:active {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:hover,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  z-index: 1;
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-focus);
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

<div
  class="components-flex wp-components-flex components-control-group wp-components-control-group components-stepper wp-components-stepper emotion-0"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item emotion-1"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button emotion-2"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item emotion-3"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon emotion-4"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="14"
            role="img"
            size="14"
            viewBox="-2 -2 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 9h12v2H4V9z"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation emotion-5"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item emotion-6"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button emotion-7"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item emotion-3"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon emotion-4"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="14"
            role="img"
            size="14"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation emotion-5"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render size 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 0);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 0);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: calc(4px * 2);
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  width: auto;
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0>*+*:not(marquee) {
  margin-left: calc(4px * 0);
  margin-left: calc(var(--wp-g2-grid-base) * 0);
}

.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (prefers-reduced-motion) {
  .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1:hover {
  z-index: 1;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 2);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: calc(4px * 2);
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: 2px;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 0.5px transparent;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  line-height: 1;
  min-height: 30px;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(4px * 1);
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(4px * 1);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding-left: calc(4px * 0);
  padding-left: calc(var(--wp-g2-grid-base) * 0);
  padding-right: calc(4px * 0);
  padding-right: calc(var(--wp-g2-grid-base) * 0);
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
  text-align: center;
  color: #007cba;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: calc(12px * calc(4/3));
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: calc(12px * calc(4/3));
  padding-right: var(--wp-g2-button-padding-x);
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  min-height: calc(30px * 0.8);
  min-height: var(--wp-g2-control-height-small);
  background-color: #ffffff;
  background-color: var(--wp-g2-control-background-color);
  border: 1px solid;
  border-color: #757575;
  border-color: var(--wp-g2-control-border-color);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  padding: calc(4px * 0);
  padding: calc(var(--wp-g2-grid-base) * 0);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2>*+*:not(marquee) {
  margin-left: calc(4px * 2);
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:hover,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  -webkit-transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[disabled]:not([aria-busy='true']),
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  z-index: 1;
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:focus {
  box-shadow: 0 0 0 0.5px #D94F4F;
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 svg {
  display: block;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active {
  color: #007cba;
  color: var(--wp-g2-button-text-color-active);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:hover {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-hover);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-hover);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-focused='true'] {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-focus);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-focus);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active {
  background-color: rgba(0, 0, 0, 0.05);
  background-color: var(--wp-g2-button-secondary-color-active);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-active);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-active);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:hover,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:active,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:focus,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true'][data-focused='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:active {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-icon='true'] {
  min-width: calc(30px * 0.8);
  min-width: var(--wp-g2-control-height-small);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:hover,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  z-index: 1;
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-focus);
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  opacity: 1;
}

@media (prefers-reduced-motion) {
  .emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 svg {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 14px;
  width: 14px;
}

@media (prefers-reduced-motion) {
  .emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 svg {
  display: block;
}

.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: -1px;
  box-shadow: 0 0px 0px 0 rgba(0 ,0,0,0);
  opacity: 1;
  opacity: var(--wp-g2-elevation-intensity);
  left: -1px;
  right: -1px;
  top: -1px;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

@media (prefers-reduced-motion) {
  .emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: -1px!important;
}

@media (prefers-reduced-motion) {
  .emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:hover {
  z-index: 1;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 2);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: calc(4px * 2);
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: 2px;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 0.5px transparent;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  line-height: 1;
  min-height: 30px;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(4px * 1);
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(4px * 1);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding-left: calc(4px * 0);
  padding-left: calc(var(--wp-g2-grid-base) * 0);
  padding-right: calc(4px * 0);
  padding-right: calc(var(--wp-g2-grid-base) * 0);
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  text-align: center;
  color: #007cba;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: calc(12px * calc(4/3));
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: calc(12px * calc(4/3));
  padding-right: var(--wp-g2-button-padding-x);
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  min-height: calc(30px * 0.8);
  min-height: var(--wp-g2-control-height-small);
  background-color: #ffffff;
  background-color: var(--wp-g2-control-background-color);
  border: 1px solid;
  border-color: #757575;
  border-color: var(--wp-g2-control-border-color);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  padding: calc(4px * 0);
  padding: calc(var(--wp-g2-grid-base) * 0);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7>*+*:not(marquee) {
  margin-left: calc(4px * 2);
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:hover,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  -webkit-transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[disabled]:not([aria-busy='true']),
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  z-index: 1;
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:focus {
  box-shadow: 0 0 0 0.5px #D94F4F;
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7 svg {
  display: block;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active {
  color: #007cba;
  color: var(--wp-g2-button-text-color-active);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:hover {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-hover);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-hover);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-focused='true'] {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-focus);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-focus);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-focus);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active {
  background-color: rgba(0, 0, 0, 0.05);
  background-color: var(--wp-g2-button-secondary-color-active);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-active);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-active);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:hover,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:active,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:focus,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true'][data-focused='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:active {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-icon='true'] {
  min-width: calc(30px * 0.8);
  min-width: var(--wp-g2-control-height-small);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:hover,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  z-index: 1;
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-focus);
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

<div
  class="components-flex wp-components-flex components-control-group wp-components-control-group components-stepper wp-components-stepper emotion-0"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item emotion-1"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button emotion-2"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item emotion-3"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon emotion-4"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="14"
            role="img"
            size="14"
            viewBox="-2 -2 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 9h12v2H4V9z"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation emotion-5"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item emotion-6"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button emotion-7"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item emotion-3"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon emotion-4"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="14"
            role="img"
            size="14"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation emotion-5"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render vertically 1`] = `
.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 0);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 0);
  --wp-g2-flex-item-display: block;
  --wp-g2-flex-item-margin-bottom: calc(4px * 2);
  --wp-g2-flex-item-margin-bottom: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-right: 0;
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
}

@media (prefers-reduced-motion) {
  .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0.emotion-0>*+*:not(marquee) {
  margin-top: calc(4px * 0);
  margin-top: calc(var(--wp-g2-grid-base) * 0);
}

.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (prefers-reduced-motion) {
  .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1.emotion-1:hover {
  z-index: 1;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 2);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: calc(4px * 2);
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: 2px;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 0.5px transparent;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  line-height: 1;
  min-height: 30px;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(4px * 1);
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(4px * 1);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding-left: calc(4px * 0);
  padding-left: calc(var(--wp-g2-grid-base) * 0);
  padding-right: calc(4px * 0);
  padding-right: calc(var(--wp-g2-grid-base) * 0);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  text-align: center;
  color: #007cba;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: calc(12px * calc(4/3));
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: calc(12px * calc(4/3));
  padding-right: var(--wp-g2-button-padding-x);
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color);
  min-height: calc(30px / 2);
  min-height: calc(var(--wp-g2-control-height) / 2);
  background-color: #ffffff;
  background-color: var(--wp-g2-control-background-color);
  border: 1px solid;
  border-color: #757575;
  border-color: var(--wp-g2-control-border-color);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  padding: calc(4px * 0);
  padding: calc(var(--wp-g2-grid-base) * 0);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2>*+*:not(marquee) {
  margin-left: calc(4px * 2);
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:hover,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  -webkit-transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[disabled]:not([aria-busy='true']),
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  z-index: 1;
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:focus {
  box-shadow: 0 0 0 0.5px #D94F4F;
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2 svg {
  display: block;
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active {
  color: #007cba;
  color: var(--wp-g2-button-text-color-active);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:hover {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-hover);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-hover);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-focused='true'] {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-focus);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-focus);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-focus);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active {
  background-color: rgba(0, 0, 0, 0.05);
  background-color: var(--wp-g2-button-secondary-color-active);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-active);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-active);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:hover,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:active,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:focus,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true'][data-focused='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-destructive='true']:active {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:hover,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:active,
.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
}

.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2.emotion-2:focus {
  z-index: 1;
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-focus);
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  opacity: 1;
}

@media (prefers-reduced-motion) {
  .emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3 svg {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 14px;
  width: 14px;
}

@media (prefers-reduced-motion) {
  .emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4.emotion-4 svg {
  display: block;
}

.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: -1px;
  box-shadow: 0 0px 0px 0 rgba(0 ,0,0,0);
  opacity: 1;
  opacity: var(--wp-g2-elevation-intensity);
  left: -1px;
  right: -1px;
  top: -1px;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

@media (prefers-reduced-motion) {
  .emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5.emotion-5 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: -1px!important;
}

@media (prefers-reduced-motion) {
  .emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:hover {
  z-index: 1;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 2);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: calc(4px * 2);
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: 2px;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 0.5px transparent;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  line-height: 1;
  min-height: 30px;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(4px * 1);
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(4px * 1);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding-left: calc(4px * 0);
  padding-left: calc(var(--wp-g2-grid-base) * 0);
  padding-right: calc(4px * 0);
  padding-right: calc(var(--wp-g2-grid-base) * 0);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  text-align: center;
  color: #007cba;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: calc(12px * calc(4/3));
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: calc(12px * calc(4/3));
  padding-right: var(--wp-g2-button-padding-x);
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color);
  min-height: calc(30px / 2);
  min-height: calc(var(--wp-g2-control-height) / 2);
  background-color: #ffffff;
  background-color: var(--wp-g2-control-background-color);
  border: 1px solid;
  border-color: #757575;
  border-color: var(--wp-g2-control-border-color);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  padding: calc(4px * 0);
  padding: calc(var(--wp-g2-grid-base) * 0);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7>*+*:not(marquee) {
  margin-left: calc(4px * 2);
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:hover,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  -webkit-transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[disabled]:not([aria-busy='true']),
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  z-index: 1;
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:focus {
  box-shadow: 0 0 0 0.5px #D94F4F;
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7 svg {
  display: block;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active {
  color: #007cba;
  color: var(--wp-g2-button-text-color-active);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:hover {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-hover);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-hover);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-focused='true'] {
  background-color: transparent;
  background-color: var(--wp-g2-button-secondary-color-focus);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-focus);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-focus);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active {
  background-color: rgba(0, 0, 0, 0.05);
  background-color: var(--wp-g2-button-secondary-color-active);
  border-color: #007cba;
  border-color: var(--wp-g2-button-secondary-border-color-active);
  color: #007cba;
  color: var(--wp-g2-button-secondary-text-color-active);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:hover,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:active,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:focus,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true'][data-focused='true'] {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-destructive='true']:active {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:hover,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:active,
.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  fill: #1e1e1e;
  fill: var(--wp-g2-color-text);
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:focus {
  z-index: 1;
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-focus);
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

<div
  class="components-flex wp-components-flex components-control-group wp-components-control-group components-stepper wp-components-stepper emotion-0"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item emotion-1"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button emotion-2"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item emotion-3"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon emotion-4"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="14"
            role="img"
            size="14"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation emotion-5"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item emotion-6"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button emotion-7"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item emotion-3"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="components-icon wp-components-icon emotion-4"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="14"
            role="img"
            size="14"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
            />
          </svg>
        </div>
      </span>
      <span
        class="components-elevation wp-components-elevation emotion-5"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;
